--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+changed early root commands to sudo
 ubuntu-14.04-server.txt renamed to ubuntu-14.04-server.md
 ubuntu-14.04-server.txt formatting
 checkout ripple-rest v1.2.5
